tests/compile_fail/as_mut/multiple_struct_attrs.stderr
error: only single `#[as_mut(forward)]` attribute is allowed here
 --> tests/compile_fail/as_mut/multiple_struct_attrs.rs:3:1
  |
3 | #[as_mut(forward)]
  | ^
